Fixed saving, retrieval and formatting of time for notes created and updated. Created dialog and some logic for deleting notes from trash. Fixed few UI attributes.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,7 @@
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white">
+            android:layout_height="wrap_content">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolBar"
@@ -40,9 +39,6 @@
             app:navGraph="@navigation/my_nav"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
-
 
 
     <com.google.android.material.navigation.NavigationView
