--- a/app/src/main/res/layout/fragment_favorite_note_details.xml
+++ b/app/src/main/res/layout/fragment_favorite_note_details.xml
@@ -21,6 +21,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/date_created_FavoriteNoteDetailsScreen"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:backgroundTint="@android:color/transparent"
+        android:text="date"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/note_title_FavoriteNoteDetailsScreen" />
+
 
     <com.google.android.material.divider.MaterialDivider
         android:id="@+id/favoriteNoteDetails_Divider"
@@ -30,7 +42,7 @@
         app:dividerColor="#BDBDBD"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/note_title_FavoriteNoteDetailsScreen"
+        app:layout_constraintTop_toBottomOf="@id/date_created_FavoriteNoteDetailsScreen"
 
         />
 
@@ -84,17 +96,5 @@
         android:text="Cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/btn_addToFavorites_FavoriteNoteDetailsScreen"
-        style="@style/MyButtonStyle_Secondary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="Favorite"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btn_saveNote_FavoriteNoteDetailsScreen"
-        app:layout_constraintStart_toEndOf="@id/btn_cancel_FavoriteNoteDetailsScreen" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
