--- a/app/src/main/res/layout/fragment_note_item.xml
+++ b/app/src/main/res/layout/fragment_note_item.xml
@@ -17,18 +17,14 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
             <TextView
                 android:id="@+id/tv_noteTitle"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:text="@string/note_title"
-                android:textColor="@color/black"
+                style="@style/NoteTitle"
+                android:textStyle="bold"
                 android:textSize="18sp"
                 android:layout_marginEnd="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -38,20 +34,6 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
-            <TextView
-                android:id="@+id/tv_noteDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:text="@string/date"
-                android:textSize="13sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
         <TextView
             android:id="@+id/tv_noteDescription"
             android:layout_width="wrap_content"
@@ -60,6 +42,16 @@
             android:text="@string/note_content"
             android:textSize="14sp"/>
 
+            <TextView
+                android:id="@+id/tv_noteDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:text="@string/date"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
     </LinearLayout>
 
