--- a/app/src/main/res/menu/private_notes_menu.xml
+++ b/app/src/main/res/menu/private_notes_menu.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:title="Remove all from private"
-        android:id="@+id/menu_remove_all_from_private"/>
+        android:id="@+id/menu_remove_all_from_private"
+        app:showAsAction="never"/>
 
     <item android:title="Delete all"
-        android:id="@+id/menu_delete_all_private_notes"/>
+        android:id="@+id/menu_delete_all_private_notes"
+        app:showAsAction="never"/>
 </menu>
