--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,28 +13,38 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
         <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
-        <item name="actionBarStyle">@style/MyActionBar</item>
-
+<!--        <item name="actionBarStyle">@style/MyActionBar</item>-->
+<!--        <item name="noteTitleColor">#F80000</item>-->
     </style>
-    
+
+
     <style name="Base.Widget.AppCompat.Button" parent="Widget.Material3.Button">
 
         <item name="colorButtonNormal">@color/white</item>
         <item name="android:textColor">@color/blue</item>
     </style>
 
-    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorAccent">@color/black</item>
-    </style>
 
-    <style name="MyActionBar" parent="@style/Widget.AppCompat.ActionBar">
-        <item name="android:textColor">@color/black</item>
-        <item name="titleTextStyle">@style/ActionBarTitleText</item>
-    </style>
+<!--    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">-->
+<!--        <item name="colorAccent">@color/black</item>-->
+<!--    </style>-->
 
-    <style name="ActionBarTitleText" parent="@style/ThemeOverlay.AppCompat.ActionBar">
-        <item name="titleTextColor">@color/blue</item>
-    </style>
+
+<!--    <style name="MyActionBar" parent="@style/Widget.AppCompat.ActionBar">-->
+<!--        <item name="android:textColor">@color/black</item>-->
+<!--        <item name="titleTextStyle">@style/ActionBarTitleText</item>-->
+<!--    </style>-->
+
+
+<!--    <style name="ActionBarTitleText" parent="ThemeOverlay.MaterialComponents.ActionBar">-->
+<!--        <item name="background">@color/blue</item>-->
+<!--    </style>-->
+
+
+<!--    <style name="NoteTitle" parent="TextAppearance.AppCompat.Body1">-->
+<!--        <item name="textColor">?noteTitleColor</item>-->
+<!--    </style>-->
+
 
     <style name="MyButtonStyle_Primary" parent="Base.Widget.AppCompat.Button">
         <item name="android:textColor">@color/blue</item>
@@ -43,16 +53,10 @@
         <item name="android:elevation">@dimen/button_elevation</item>
     </style>
 
+
     <style name="MyButtonStyle_Secondary" parent="Base.Widget.AppCompat.Button">
         <item name="android:textColor">#535353</item>
         <item name="backgroundTint">@color/grey_tint</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:elevation">@dimen/button_elevation</item>
-    </style>
-
-    <style name="MyButtonStyle_FavoriteButtonColour" parent="Base.Widget.AppCompat.Button">
-        <item name="android:textColor">#535353</item>
-        <item name="backgroundTint">#F964FD</item>
         <item name="android:textStyle">bold</item>
         <item name="android:elevation">@dimen/button_elevation</item>
     </style>
