Replaced separate deleted note table with boolean flag and queried to show list based on the flag value Also added ripple for clicks for recycler view item

--- a/app/src/main/res/layout/fragment_note_item.xml
+++ b/app/src/main/res/layout/fragment_note_item.xml
@@ -9,6 +9,7 @@
     android:paddingBottom="2.5dp"
     android:paddingStart="15dp"
     app:cardCornerRadius="20dp"
+    android:background="?android:attr/selectableItemBackground"
     app:cardElevation="7dp">
 
     <LinearLayout
