--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,8 +6,8 @@
         <item name="colorPrimaryVariant">@color/blue_variant</item>
         <item name="colorOnPrimary">#000000</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/blue</item>
-        <item name="colorSecondaryVariant">@color/blue_variant</item>
+        <item name="colorSecondary">@color/lemon_green</item>
+        <item name="colorSecondaryVariant">@color/darker_lemon_green</item>
         <item name="colorOnSecondary">@color/blue_variant</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
