--- a/app/src/main/res/layout/fragment_note_item.xml
+++ b/app/src/main/res/layout/fragment_note_item.xml
@@ -40,6 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
+            android:layout_marginTop="5dp"
             android:text="@string/note_content"
             android:textSize="14sp"/>
 
