--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -51,15 +51,13 @@
         android:id="@+id/fab_add_note_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/myFAB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="30dp"
-        android:backgroundTint="@color/white"
         android:contentDescription="@string/add_note_button"
-        android:elevation="10dp"
         android:src="@drawable/ic_blue_plus_11965"
-        app:borderWidth="0dp"
         app:layout_anchor="@id/rvList"
         app:layout_anchorGravity="bottom|end" />
 
