--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -17,4 +17,13 @@
 
     <color name="lemon_green">#4DE400</color>
     <color name="darker_lemon_green">#3AA800</color>
+
+    <color name="light_blue">#03A9F4</color>
+    <color name="dark_blue">#0288D1</color>
+    <color name="cyan">#B3E5FC</color>
+    <color name="amber">#FFC107</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#757575</color>
+    <color name="icons">#FFFFFF</color>
+    <color name="divider">#BDBDBD</color>
 </resources>
